# nanochat-for-tpu-sprint

./: .gitignore  README.md  data_loader.py  error.txt  model.py  pyproject.toml  test_jax.py  train.py
src/nanochat_for_tpu_sprint/: __init__.py
